--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
     "eslint-plugin-drizzle": "^0.2.3",
+    "pnpm": "9.10.0",
     "postcss": "^8.4.39",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
@@ -49,5 +50,5 @@
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
-  "packageManager": "pnpm@10.1.0"
+  "packageManager": "pnpm@9.10.0"
 }
