--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
   },
   "dependencies": {
     "@libsql/client": "^0.9.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
+    "lucide-react": "^0.474.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -37,7 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.24.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.19.0",
     "eslint-config-next": "^15.0.1",
     "eslint-plugin-drizzle": "^0.2.3",
     "pnpm": "9.10.0",
