--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ DATABASE_URL="file:./db.sqlite"
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+SINGLESTORE_USER="drive-netlify-deployment4"
+SINGLESTORE_PASS="notpassword"
+SINGLESTORE_HOST=random.svc.singlestore.com
+SINGLESTORE_PORT=3333
+SINGLESTORE_DB_NAME=DRIVE_CLONE_DB4
