fixing build error

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ SINGLESTORE_PASS="notpassword"
 SINGLESTORE_HOST=random.svc.singlestore.com
 SINGLESTORE_PORT=3333
 SINGLESTORE_DB_NAME=DRIVE_CLONE_DB4
+
+NEXT_PUBLIC_POSTHOG_KEY=sof_aoidfoisajfoisajdfiosajoifdsafo
